1.0.6
----------
- Custom AI cores no longer show up when selecting AI cores for industries.
- Adjusted a few sprites.
- Peak CR stat base effect 0.3 -> 0.2.
- Fixed issue with and modified a defender fleet.
- Fixed issue with certain skill applying to modules.
- Fixed issue with certain skill using fleet member's CR rather than ship's CR.
- (7:45 PM EST 5/20/2025): Fixed issue with analysis package causing crashing in main menu missions. No new version, just re-download latest.

1.0.5
----------
Note: mastery effect weighting has been changed. After updating, your ships' mastery selections may be slightly modified.

- Reduced base effectiveness of kill-streak mastery:
    - 5% increase for equal-DP-ship-kill -> 2.5%
    - 10% maximum damage increase -> 7.5%
- Adjusted reduced-DP-if-only-ship-in-fleet mastery:
    - Now is only affected by mastery strength modifiers at 50% rate.
    - E.g. if base reduction is 10%, and your mastery strength boost is at +100%, modified reduction is 15% (previously: 20%).
- Added back d-mod effect reduction mastery.
- Increased chance of rolling stat-modifier mastery effects.
- Nav relay, ECM package, Operations Center masteries:
    - Decreased tier from 4 to 3.
    - Reduced selection weight.
- CR-doesn't-degrade-past-threshold mastery:
    - Safety overrides now negates the entire effect.
- Post-inflation S-mod adder now strongly prefers building in existing hullmods, to lower the chance of triggering magic incompatibilities, etc.
    - Not feasible to check for incompatibilities beforehand as that is done on the ship level, not the variant level.
- Custom d-mods now respect DMOD_EFFECT_MULT.
- Adjusted a defender fleet.
- Adjusted a couple of skills.
- Reduced MP multiplier for civilian ships deployed in non-autoresolve combat from 3x to 2x.
- Concealed stations no longer stop in-game music when interacted with.
- Fixed issue with d-mod acquisition seed.